# neuromem-sdk

./: .gitignore  BENCHMARK_PROMPT.md  BENCHMARK_RUN_PROMPT.md  BRAIN_OPTIMIZATION.md  BUGFIX_RETRIEVAL_VALIDATION.md  CHANGELOG.md  CLAUDE.MD  DEPLOYMENT_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  PHASE1_MCP_PROMPT.md  PHASE2_PLUGINS_PROMPT.md  PHASE3_ADAPTERS_PROMPT.md  PRODUCTION_RELEASE_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  V020_FIXES_PROMPT.md  neuromem.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_retrieval_fix.py  test_sdk.sh  test_setup.py  user_memories.csv
.github/workflows/: ci-cd.yml  ci.yml  release.yml
benchmarks/: .gitignore  README.md  __init__.py  __main__.py  requirements.txt  run_benchmark.py
benchmarks/adapters/: __init__.py  base.py  langmem_adapter.py  mem0_adapter.py  mempalace_adapter.py  neuromem_adapter.py  zep_adapter.py
benchmarks/datasets/: __init__.py  convomem_loader.py  locomo_loader.py  longmemeval_loader.py  membench_loader.py
benchmarks/evaluators/: __init__.py  llm_judge.py  metrics.py
benchmarks/runners/: convomem_runner.py  latency_runner.py  locomo_runner.py  longmemeval_runner.py  membench_runner.py
examples/: DEMO_GUIDE.md  QUICKSTART.md  README.md  ai_assistant_ollama.py  basic_usage.py  brain_optimization_example.py  demo_agent.py  inngest_workflows.py  inspect_data.py  langchain_simple.py  langgraph_production.py  langgraph_simple.py  litellm_simple.py  neuromem.yaml  validate_sdk.py
neuromem/: __init__.py  config.py  config_schema.py  constants.py  health.py  user.py  user_store.py
neuromem/adapters/: __init__.py  autogen.py  crewai.py  dspy.py  haystack.py  langchain.py  langgraph.py  litellm.py  semantic_kernel.py
neuromem/brain/: __init__.py  state_store.py  system.py  types.py
neuromem/brain/amygdala/: __init__.py  emotional_tagger.py
neuromem/brain/basal_ganglia/: __init__.py  td_learner.py
neuromem/brain/hippocampus/: __init__.py  ca1_gate.py  pattern_completion.py  pattern_separation.py
neuromem/brain/neocortex/: __init__.py  schema_integrator.py
neuromem/brain/prefrontal/: __init__.py  working_memory.py
neuromem/cli/: __init__.py  config.py  doctor.py  init.py
neuromem/core/: __init__.py  bm25_scorer.py  consolidation.py  context_layers.py  controller.py  cross_encoder_reranker.py  decay.py  graph.py  hybrid_boosts.py  hyde.py  llm_reranker.py  query.py  query_expansion.py  retrieval.py  task_scheduler.py  task_types.py  topic_detector.py  types.py  verbatim.py
neuromem/core/audit/: __init__.py  ingest_log.py  observation_log.py  retrieval_log.py
neuromem/core/ingest/: __init__.py  docling_parser.py  ingester.py  markdown_parser.py  registry.py  types.py
neuromem/core/observability/: __init__.py  metrics.py  tracing.py
neuromem/core/policies/: __init__.py  conflict_resolution.py  optimization.py  reconsolidation.py  salience.py
neuromem/core/workers/: __init__.py  base.py  ingest_worker.py  maintenance_worker.py
neuromem/mcp/: __init__.py  __main__.py  server.py  tunnel.py  types.py
neuromem/memory/: __init__.py  consolidation.py  episodic.py  hybrid_retrieval.py  main.py  procedural.py  semantic.py  session.py  summaries.py  templates.py
neuromem/multimodal/: __init__.py  errors.py  router.py  types.py
neuromem/multimodal/encoders/: __init__.py  text_encoder.py
neuromem/multimodal/fusion/: __init__.py  multimodal_fusion.py
neuromem/multimodal/livekit/: __init__.py  frame_sampler.py  session_bridge.py  vad_sampler.py
neuromem/storage/: __init__.py  base.py  memory.py  postgres.py  qdrant.py  sqlite.py
neuromem/ui/: __init__.py  cli.py  server.py
neuromem/ui/api/: __init__.py  auth.py  config_routes.py
neuromem/ui/web/: .gitkeep
neuromem/utils/: __init__.py  auto_tagger.py  embedding_optimizer.py  embeddings.py  llm.py  logging.py  providers.py  retry.py  time.py  validation.py
neuromem/workflows/: __init__.py  client.py  events.py  functions.py  server.py
plugins/antigravity/: README.md
plugins/claude-code/: .mcp.json  README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/agents/: memory-assistant.md
plugins/claude-code/commands/: consolidate.md  forget.md  memories.md  recall.md  remember.md
plugins/claude-code/hooks/: hooks.json
plugins/codex-cli/: .mcp.json  README.md
plugins/codex-cli/.codex-plugin/: plugin.json
plugins/cursor/: README.md
plugins/cursor/.cursor/: mcp.json
plugins/docs/: CHATGPT.md  CLAUDE_AI_WEB.md  GEMINI_CHAT.md  INTEGRATION_GUIDE.md  QUICKSTART.md
plugins/gemini-cli/: GEMINI.md  README.md  gemini-extension.json
plugins/gemini-cli/commands/: consolidate.toml  forget.toml  memories.toml  recall.toml  remember.toml
research/: 00-current-state.md  01-sota-landscape.md  02-cognitive-alignment.md  03-competitive-gap-analysis.md  04-technical-roadmap.md  04-technical-roadmap.v2.md
scripts/: check_future_annotations.py  setup_qdrant_smoke.py
tests/: __init__.py  conftest.py  test_autogen_adapter.py  test_benchmark_runners.py  test_bm25_scorer.py  test_brain.py  test_core.py  test_crewai_adapter.py  test_dspy_adapter.py  test_graph.py  test_haystack_adapter.py  test_hybrid_boosts.py  test_mcp.py  test_multimodal.py  test_query.py  test_semantic_kernel_adapter.py  test_v040_audit_log.py  test_v040_belief_state.py  test_v040_emotional_modulation.py  test_v040_ingest.py  test_v040_mcp_tunnel.py  test_v040_plugin_manifests.py  test_v040_provider_errors.py  test_v040_qdrant_default.py  test_v040_reranker_dispatch.py  test_v040_retrieval_result.py  test_v040_ui_crud_ingest.py  test_v040_ui_server.py  test_v042_config_routes.py  test_v042_config_schema.py  test_v042_init_wizard.py  test_v042_service_auth.py  test_v042_user_store.py  test_v047_mcp_mount.py  test_v047_uuid_resolution.py  test_verbatim.py  test_workflows.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/components/: CytoscapeGraph.tsx  ForceGraph3D.tsx
(+21 files in other folders)
