[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromem-sdk"
version = "0.4.3"
description = "Brain-Faithful Multimodal Memory SDK for AI Agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "NeuroMem Team"}
]
keywords = ["ai", "memory", "langchain", "langgraph", "agents", "llm", "cognitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
openai = [
    "openai>=1.0.0",
    "langchain-openai>=1.1.7",
]
anthropic = [
    "langchain-anthropic>=1.3.2",
]
langchain = [
    "langchain>=0.1.0",
]
langgraph = [
    "langgraph>=0.0.1",
]
inngest = [
    "inngest>=0.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
mcp = [
    "mcp>=1.26.0",
    "pydantic>=2.0.0",
]
ui = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "questionary>=2.0.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
]
ingest = [
    "docling>=2.0.0",
]
crewai = [
    "crewai>=1.10.0",
]
autogen = [
    "ag2>=0.8.0",
]
dspy = [
    "dspy>=3.0.0",
]
haystack = [
    "haystack-ai>=2.20.0",
]
semantic-kernel = [
    "semantic-kernel>=1.30.0",
]
# v0.3.0 — Brain-faithful multimodal support
brain = [
    "numpy>=1.24.0",
]
multimodal = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "openai-whisper>=20231117",
    "soundfile>=0.12.0",
    "Pillow>=10.0.0",
]
livekit = [
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
]
# NOTE: crewai and dspy have conflicting json-repair pins and cannot
# be installed together.  Use the individual extras or one of the
# composite groups below.
all-no-dspy = [
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "qdrant-client>=1.7.0",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=1.3.2",
    "inngest>=0.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "mcp>=1.26.0",
    "pydantic>=2.0.0",
    "crewai>=1.10.0",
    "ag2>=0.8.0",
    "haystack-ai>=2.20.0",
    "semantic-kernel>=1.30.0",
]
all-no-crewai = [
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "qdrant-client>=1.7.0",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=1.3.2",
    "inngest>=0.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "mcp>=1.26.0",
    "pydantic>=2.0.0",
    "ag2>=0.8.0",
    "dspy>=3.0.0",
    "haystack-ai>=2.20.0",
    "semantic-kernel>=1.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    # httpx is required by fastapi.TestClient (used by v0.4.0 UI tests
    # and v0.4.2 config/auth tests). It's a transitive of nothing else
    # we ship, so it must be pinned in [dev] to keep CI green.
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Vk-thug/neuromem-sdk"
Documentation = "https://docs.neuromem.ai"
Repository = "https://github.com/Vk-thug/neuromem-sdk"
Issues = "https://github.com/Vk-thug/neuromem-sdk/issues"

[project.scripts]
neuromem = "neuromem.cli:main"
# Deprecated aliases — removed in v0.5.0. Use `neuromem ui` and `neuromem mcp`.
neuromem-mcp = "neuromem.mcp.__main__:main"
neuromem-ui = "neuromem.ui.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuromem*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
# Ship the built SPA inside the wheel.
"neuromem.ui" = ["web/**/*", "web/**/**/*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
